# f1-pole-predictor

./: README.md  f1-notebook.ipynb  f1_analysis.ipynb  pyproject.toml
